[27 September 2007]

* Add #tag_counts method to get tag counts for a specific object's tags.

* BACKWARDS INCOMPATIBILITY: Rename #find_options_for_tagged_with to #find_options_for_find_tagged_with

[17 September 2007]

* Fix clearing of cached tag list when all tags removed.

[12 September 2007]

* Make the TagList class inherit from Array.

  BACKWARDS INCOMPATIBILITY:
  
    TagList#initialize, TagList#add, and TagList#remove no longer accept array arguments.
    
    Old: TagList.new(["One", "Two"])
    New: TagList.new("One", "Two")

* Deprecate obsolete TagList#names.

[6 September 2007]

* Add TagList#include? and TagList#empty?

[26 August 2006]

* Remove deprecated Tag.delimiter. Use TagList.delimiter instead.

[25 August 2007]

* Make tag_counts work with has_many :through

[23 August 2007]

* Make search comparisons case-insensitive across different databases. [Moisés Machado]

* Improve compatiblity with STI. [Moisés Machado]

[25 July 2007]

* Respect custom table names for the Tag and Tagging classes.

* Fix the :exclude option for find_tagged_with

[17 July 2007]

* Make the migration work on edge rails

[8 July 2007]

* find_options_for_tagged_with should not alter its arguments

[1 July 2007]

* Fix incorrect tagging when the case of the tag list is changed.

* Fix deprecated Tag.delimiter accessor.

[23 June 2007]

* Add validation to Tag model.

* find_options_for_tagged_with should always return a hash.

* find_tagged_with passing in no tags should return an empty array.

* Improve compatibility with PostgreSQL.

[21 June 2007]

* Remove extra .rb from generated migration file name.

[15 June 2007]

* Introduce TagList class.

* Various cleanups and improvements.

* Use TagList.delimiter now, not Tag.delimiter. Tag.delimiter will be removed at some stage.

[11 June 2007]

* Restructure the creation of the options for find_tagged_with [Thijs Cadier]

* Add an example migration with a generator.

* Add caching.
