@@ -18,6 +18,7 @@ require 'active_record/fixtures'
 
 require File.dirname(__FILE__) + '/../lib/acts_as_taggable'
 require_dependency File.dirname(__FILE__) + '/../lib/tag_list'
+require_dependency File.dirname(__FILE__) + '/../lib/tags_helper'
 
 ActiveRecord::Base.logger = Logger.new(File.dirname(__FILE__) + '/debug.log')
 ActiveRecord::Base.configurations = YAML::load(IO.read(File.dirname(__FILE__) + '/database.yml'))
